--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.session.timeout=16m
 imed.application.version=0.01
 # General url pattern to skip security check
 imed.portal.pages.urls.anon=/,/h2-console/**,/login,/about,/reset,/resetconfirm,/apply,/confirm,/book/**,/faqs,/privacy,/terms,/feedback/**,/shareconfirm,/js/public/**,/images/public/**,/css/**,/referreraccount/**,/imedvisage/**,/rest/**,/robots.txt,/sitemap.xml,/support,/termsofuse,/mycrm
-imed.portal.pages.urls.admin=/admin,/admin/**
+imed.portal.pages.urls.admin=/admin,/admin/**,/adminrest,/adminrest/**
 #swagger related urls to skip security check
 imed.portal.pages.urls.anon.swagger=/swagger*,/swagger**/*.*,/swagger-resources/**,/webjars/*,/webjars/springfox-swagger-ui/**,/v2/api-docs 
 imed.portal.pages.rest.methods.nocsrf=/imedvisage/token,/imedvisage/refreshtoken,/rest/userldap,/rest/booking,/rest/applyaccount,/imedvisage/user,/apply
