--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -5,11 +5,11 @@ server.servlet.session.timeout=16m
 
 imed.application.version=0.01
 # General url pattern to skip security check
-imed.portal.pages.urls.anon=/,/h2-console/**,/login,/about,/reset,/resetconfirm,/apply,/confirm,/book/**,/faqs,/privacy,/terms,/feedback/**,/shareconfirm,/js/public/**,/images/public/**,/css/**,/referreraccount/**,/imedvisage/**,/rest/**,/robots.txt,/sitemap.xml,/support,/termsofuse,/mycrm
+imed.portal.pages.urls.anon=/,/h2-console/**,/login,/about,/reset,/resetconfirm,/apply,/confirm,/book/**,/faqs,/privacy,/terms,/feedback/**,/shareconfirm,/js/public/**,/images/public/**,/css/**,/referreraccount/**,/imedvisage/**,/rest/**,/robots.txt,/sitemap.xml,/support,/termsofuse,/mycrm,/visage/**
 imed.portal.pages.urls.admin=/admin,/admin/**,/adminrest,/adminrest/**
 #swagger related urls to skip security check
 imed.portal.pages.urls.anon.swagger=/swagger*,/swagger**/*.*,/swagger-resources/**,/webjars/*,/webjars/springfox-swagger-ui/**,/v2/api-docs 
-imed.portal.pages.rest.methods.nocsrf=/imedvisage/token,/imedvisage/refreshtoken,/rest/userldap,/rest/booking,/rest/applyaccount,/imedvisage/user,/apply
+imed.portal.pages.rest.methods.nocsrf=/visage/token,/visage/refreshtoken,/visage/preferences,/visage/user/checkEmail,/visage/user/details,/visage/user/password,/visage/reportNotify/register,/rest/userldap,/rest/booking,/rest/applyaccount,/imedvisage/user,/apply
 #TODO /apply should be back csrf enabled
 imed.portal.sare.base.url=https://i-med.com.au/quick-report?imsec=
 
@@ -24,3 +24,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 #Scheduler cron expressions
 imed.scheduler.marketing.team.email.cron=0 0 2 * * MON
+
+# ldap credentials
+imed.ldap.userdn=cn=root
+imed.ldap.password=794bo3HAST
