--- a/referrer-portal/pom.xml
+++ b/referrer-portal/pom.xml
@@ -185,6 +185,12 @@
 			<version>2.6.12</version>
 		</dependency>
 
+		<!-- PDF -->
+		<dependency>
+    		<groupId>com.itextpdf</groupId>
+    		<artifactId>html2pdf</artifactId>
+    		<version>2.1.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
