--- a/referrer-portal/pom.xml
+++ b/referrer-portal/pom.xml
@@ -185,11 +185,26 @@
 			<version>2.6.12</version>
 		</dependency>
 
-		<!-- PDF -->
+<!-- PDF -->
 		<dependency>
-    		<groupId>com.itextpdf</groupId>
-    		<artifactId>html2pdf</artifactId>
-    		<version>2.1.4</version>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.50</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>1.50</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf.tool</groupId>
+			<artifactId>xmlworker</artifactId>
+			<version>5.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.0</version>
 		</dependency>
 	</dependencies>
 
