--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.session.timeout=16m
 
 imed.application.version=0.01
 # General url pattern to skip security check
-imed.portal.pages.urls.anon=/,/h2-console/**,/login,/about,/reset,/resetconfirm,/apply,/confirm,/book/**,/faqs,/privacy,/terms,/feedback/**,/quick-report,/shareconfirm,/js/public/**,/images/public/**,/css/**,/referreraccount/**,/imedvisage/**,/rest/**,/robots.txt,/sitemap.xml,/support,/termsofuse,/mycrm,/imedvisage/v1/**
+imed.portal.pages.urls.anon=/,/h2-console/**,/login,/about,/reset,/resetconfirm,/apply,/confirm,/book/**,/faqs,/privacy,/terms,/feedback/**,/quick-report,/reportdownload,/shareconfirm,/js/public/**,/images/public/**,/css/**,/referreraccount/**,/imedvisage/**,/rest/**,/robots.txt,/sitemap.xml,/support,/termsofuse,/mycrm,/imedvisage/v1/**
 imed.portal.pages.urls.admin=/admin,/admin/**,/adminrest,/adminrest/**
 #swagger related urls to skip security check
 imed.portal.pages.urls.anon.swagger=/swagger*,/swagger**/*.*,/swagger-resources/**,/webjars/*,/webjars/springfox-swagger-ui/**,/v2/api-docs 
