--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -14,7 +14,7 @@ imed.portal.pages.rest.methods.nocsrf=/imedvisage/v1/token,/imedvisage/v1/refres
 imed.portal.sare.base.url=https://i-med.com.au/quick-report?imsec=
 
 imed.portal.auth.groups.admin=York St Corporate Office,Referrer Support Team
-imed.portal.auth.groups.editor=I-MED Content Authors
+imed.portal.auth.groups.editor=I-MED Content Authors,jenkins-developer
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=4MB
