--- a/referrer-portal/pom.xml
+++ b/referrer-portal/pom.xml
@@ -185,7 +185,7 @@
 			<version>2.6.12</version>
 		</dependency>
 
-<!-- PDF -->
+		<!-- PDF -->
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk15on</artifactId>
@@ -205,6 +205,13 @@
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.0</version>
+		</dependency>
+		
+		<!-- Excel -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.0</version>
 		</dependency>
 	</dependencies>
 
