Task85. Account application process enhancements : base

--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 server.port=8084
 server.servlet.context-path=/referrer
 
-imed.application.url=https://portal.i-med.com.au/referrer
+imed.application.url=https://i-medonline.com.au/referrer
 
 imed.visage.url=http://10.20.164.4:8181/jris/portal/v1/
 imed.vuemotion.url=https://csvic.i-med.com.au/portal
@@ -32,6 +32,6 @@ sqlserver2.datasource.password=282Bde1ed8
 
 # Scheduler related configs
 
-imed.scheduler.server.name=imedpdtom01.imed
+imed.scheduler.server.name=imedpdtom08.imed
 imed.marketing.team.weekly.report.scheduler.server.name=imedpdtom02.imed
 imed.marketing.team.email.ids=Martin.Cox@i-med.com.au,Alexandra.Arter@i-med.com.au
