--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.profiles.active=test
 
 server.error.whitelabel.enabled=false
 server.servlet.session.timeout=242m
+server.servlet.session.cookie.max-age=242m
 
 imed.application.version=0.01
 # General url pattern to skip security check
