--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.profiles.active=test
 server.error.whitelabel.enabled=false
 server.servlet.session.timeout=242m
 server.servlet.session.cookie.max-age=242m
+server.connection-timeout=6m
 
 imed.application.version=0.01
 # General url pattern to skip security check
@@ -18,8 +19,8 @@ imed.portal.auth.groups.admin=York St Corporate Office,Referrer Support Team
 imed.portal.auth.groups.editor=I-MED Content Authors,jenkins-developer
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=4MB
-spring.servlet.multipart.max-request-size=5MB
+spring.servlet.multipart.max-file-size=8MB
+spring.servlet.multipart.max-request-size=16MB
 
 #spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=none
