generic error page for Waf

--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.connection-timeout=6m
 
 imed.application.version=0.01
 # General url pattern to skip security check
-imed.portal.pages.urls.anon=/,/h2-console/**,/login,/about,/reset,/resetconfirm,/apply,/confirm,/book/**,/faqs,/privacy,/terms,/feedback/**,/quick-report,/reportdownload,/shareconfirm,/js/public/**,/files/public/**,/images/public/**,/css/**,/referreraccount/**,/imedvisage/**,/rest/**,/robots.txt,/sitemap.xml,/support,/termsofuse,/crmrest/**,/mycrm,/findmycrm,/imedvisage/v1/**
+imed.portal.pages.urls.anon=/,/h2-console/**,/login,/about,/reset,/resetconfirm,/apply,/confirm,/book/**,/faqs,/privacy,/terms,/feedback/**,/quick-report,/reportdownload,/shareconfirm,/js/public/**,/files/public/**,/images/public/**,/css/**,/referreraccount/**,/imedvisage/**,/rest/**,/robots.txt,/sitemap.xml,/support,/termsofuse,/crmrest/**,/mycrm,/findmycrm,/imedvisage/v1/**,/genericmsg.html
 imed.portal.pages.urls.admin=/admin,/admin/**,/adminrest,/adminrest/**
 imed.portal.pages.urls.editor=/editor,/editor/**,/editorrest,/editorrest/**
 #swagger related urls to skip security check
