Auto validation on account application - basework

--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -33,3 +33,8 @@ sqlserver2.datasource.password=282Bde1ed8
 # Scheduler related configs
 imed.scheduler.server.name=imedpdtom08.imed
 imed.marketing.team.email.ids=Martin.Cox@i-med.com.au,Alexandra.Arter@i-med.com.au
+imed.scheduler.auto.validation.server.name=imedpdtom07.imed
+
+#Ahpra scrapper local
+imed.ahpra.bot.local.url=https://connections.i-medonline.com.au/datascrapper/ahpraDetail
+
