--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -32,3 +32,7 @@ sqlserver2.datasource.password=b&c7$4$3=&=C
 # Scheduler related configs
 imed.scheduler.server.name=imedtstom08.imed
 imed.marketing.team.email.ids=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au
+imed.scheduler.auto.validation.server.name=imedtstom07.imed
+
+#Ahpra scrapper local
+imed.ahpra.bot.local.url=https://testportal.imed/datascrapper/ahpraDetail
