PROD local ahpra url

--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -36,5 +36,5 @@ imed.marketing.team.email.ids=Martin.Cox@i-med.com.au,Alexandra.Arter@i-med.com.
 imed.scheduler.auto.validation.server.name=imedpdtom07.imed
 
 #Ahpra scrapper local
-imed.ahpra.bot.local.url=https://connections.i-medonline.com.au/datascrapper/ahpraDetail
+imed.ahpra.bot.local.url=https://i-medonline.com.au/datascrapper/ahpraDetail
 
