--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -17,6 +17,7 @@ imed.portal.sare.base.url=https://i-med.com.au/quick-report?imsec=
 
 imed.portal.auth.groups.admin=York St Corporate Office,Referrer Support Team
 imed.portal.auth.groups.editor=I-MED Content Authors,jenkins-developer
+imed.portal.auth.groups.hospital=Hospital Access Referrer
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=8MB
