--- a/referrer-portal/pom.xml
+++ b/referrer-portal/pom.xml
@@ -245,6 +245,13 @@
 			<artifactId>hapi-base</artifactId>
 			<version>2.2</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>html2pdf</artifactId>
+		    <version>2.0.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
