Update to pdf and email content.

--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -37,3 +37,10 @@ imed.shared.folder.mnt=/mnt/refdrop/test
 
 #Ahpra scrapper local
 imed.ahpra.bot.local.url=https://testportal.imed/datascrapper/ahpraDetail
+
+#Electronic referral
+imed.electronic.referral.nsw.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
+imed.electronic.referral.qld.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
+imed.electronic.referral.vic.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
+imed.electronic.referral.wa.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
+imed.electronic.referral.ril.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
