--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -39,3 +39,9 @@ imed.shared.folder.mnt=/mnt/refdrop/prod
 #Ahpra scrapper local
 imed.ahpra.bot.local.url=https://i-medonline.com.au/datascrapper/ahpraDetail
 
+#Electronic referral
+imed.electronic.referral.nsw.email.id=Enquiries.country@i-med.com.au
+imed.electronic.referral.qld.email.id=bookingsqld@i-med.com.au
+imed.electronic.referral.vic.email.id=Imedbookings.Northeast@i-med.com.au
+imed.electronic.referral.wa.email.id=wa@i-med.com.au
+imed.electronic.referral.ril.email.id=hobart@i-med.com.au
