Allow public to use electronic referral.

--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -7,12 +7,12 @@ server.connection-timeout=242m
 
 imed.application.version=0.01
 # General url pattern to skip security check
-imed.portal.pages.urls.anon=/,/h2-console/**,/login,/about,/reset,/resetconfirm,/apply,/confirm,/book/**,/faqs,/privacy,/terms,/feedback/**,/quick-report,/reportdownload,/shareconfirm,/js/public/**,/files/public/**,/images/public/**,/css/**,/referreraccount/**,/imedvisage/**,/rest/**,/robots.txt,/sitemap.xml,/support,/termsofuse,/crmrest/**,/mycrm,/findmycrm,/imedvisage/v1/**,/genericmsg.html
+imed.portal.pages.urls.anon=/,/h2-console/**,/login,/about,/reset,/resetconfirm,/apply,/confirm,/book/**,/faqs,/privacy,/terms,/feedback/**,/quick-report,/reportdownload,/shareconfirm,/js/public/**,/files/public/**,/images/public/**,/css/**,/referreraccount/**,/imedvisage/**,/rest/**,/robots.txt,/sitemap.xml,/support,/termsofuse,/crmrest/**,/mycrm,/findmycrm,/imedvisage/v1/**,/genericmsg.html,/electronicreferralrest/**
 imed.portal.pages.urls.admin=/admin,/admin/**,/adminrest,/adminrest/**
 imed.portal.pages.urls.editor=/editor,/editor/**,/editorrest,/editorrest/**
 #swagger related urls to skip security check
 imed.portal.pages.urls.anon.swagger=/swagger*,/swagger**/*.*,/swagger-resources/**,/webjars/*,/webjars/springfox-swagger-ui/**,/v2/api-docs 
-imed.portal.pages.rest.methods.nocsrf=/imedvisage/v1/token,/imedvisage/v1/refreshtoken,/imedvisage/v1/preferences,/imedvisage/v1/hospitalPreferences,/imedvisage/v1/user/checkEmail,/imedvisage/v1/user/details,/imedvisage/v1/user/password,/imedvisage/v1/mobileWarning,/imedvisage/v1/reportNotify/register,/rest/userldap,/rest/booking,/rest/applyaccount,/imedvisage/user,/apply
+imed.portal.pages.rest.methods.nocsrf=/imedvisage/v1/token,/imedvisage/v1/refreshtoken,/imedvisage/v1/preferences,/imedvisage/v1/hospitalPreferences,/imedvisage/v1/user/checkEmail,/imedvisage/v1/user/details,/imedvisage/v1/user/password,/imedvisage/v1/mobileWarning,/imedvisage/v1/reportNotify/register,/rest/userldap,/rest/booking,/rest/applyaccount,/imedvisage/user,/apply,/electronicreferralrest/**
 imed.portal.sare.base.url=https://i-med.com.au/quick-report?imsec=
 
 imed.portal.auth.groups.admin=York St Corporate Office,Referrer Support Team
