--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -40,8 +40,8 @@ imed.shared.folder.mnt=/mnt/refdrop/prod
 imed.ahpra.bot.local.url=https://i-medonline.com.au/datascrapper/ahpraDetail
 
 #Electronic referral
-imed.electronic.referral.nsw.email.id=Enquiries.country@i-med.com.au
-imed.electronic.referral.qld.email.id=bookingsqld@i-med.com.au
-imed.electronic.referral.vic.email.id=Imedbookings.Northeast@i-med.com.au
-imed.electronic.referral.wa.email.id=wa@i-med.com.au
-imed.electronic.referral.ril.email.id=hobart@i-med.com.au
+imed.electronic.referral.nsw.email.id=Enquiries.country@i-med.com.au,imedbookings.northeast@i-med.com.au
+imed.electronic.referral.qld.email.id=bookingsqld@i-med.com.au,imedbookings.northeast@i-med.com.au
+imed.electronic.referral.vic.email.id=northeast@i-med.com.au,imedbookings.northeast@i-med.com.au
+imed.electronic.referral.wa.email.id=wa@i-med.com.au,imedbookings.northeast@i-med.com.au
+imed.electronic.referral.ril.email.id=hobart@i-med.com.au,imedbookings.northeast@i-med.com.au
