--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -39,8 +39,8 @@ imed.shared.folder.mnt=/mnt/refdrop/test
 imed.ahpra.bot.local.url=https://testportal.imed/datascrapper/ahpraDetail
 
 #Electronic referral
-imed.electronic.referral.nsw.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
-imed.electronic.referral.qld.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
-imed.electronic.referral.vic.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
-imed.electronic.referral.wa.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
-imed.electronic.referral.ril.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
+imed.electronic.referral.nsw.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au,imedbookings.northeast@i-med.com.au
+imed.electronic.referral.qld.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au,imedbookings.northeast@i-med.com.au
+imed.electronic.referral.vic.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au,imedbookings.northeast@i-med.com.au
+imed.electronic.referral.wa.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au,imedbookings.northeast@i-med.com.au
+imed.electronic.referral.ril.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au,imedbookings.northeast@i-med.com.au
