--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -44,4 +44,5 @@ imed.electronic.referral.nsw.email.id=Enquiries.country@i-med.com.au
 imed.electronic.referral.qld.email.id=bookingsqld@i-med.com.au
 imed.electronic.referral.vic.email.id=northeast@i-med.com.au
 imed.electronic.referral.wa.email.id=wa@i-med.com.au
+imed.electronic.referral.drjones.email.id=contactcentre@drjones.com.au
 imed.electronic.referral.ril.email.id=hobart@i-med.com.au
