--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=prod
 
 server.error.whitelabel.enabled=false
 server.servlet.session.timeout=242m
@@ -12,7 +12,7 @@ imed.portal.pages.urls.admin=/admin,/admin/**,/adminrest,/adminrest/**
 imed.portal.pages.urls.editor=/editor,/editor/**,/editorrest,/editorrest/**
 #swagger related urls to skip security check
 imed.portal.pages.urls.anon.swagger=/swagger*,/swagger**/*.*,/swagger-resources/**,/webjars/*,/webjars/springfox-swagger-ui/**,/v2/api-docs 
-imed.portal.pages.rest.methods.nocsrf=/imedvisage/v1/token,/imedvisage/v1/refreshtoken,/imedvisage/v1/preferences,/imedvisage/v1/hospitalPreferences,/imedvisage/v1/user/checkEmail,/imedvisage/v1/user/details,/imedvisage/v1/user/password,/imedvisage/v1/mobileWarning,/imedvisage/v1/reportNotify/register,/rest/userldap,/rest/booking,/rest/applyaccount,/imedvisage/user,/apply
+imed.portal.pages.rest.methods.nocsrf=/imedvisage/v1/token,/imedvisage/v1/refreshtoken,/imedvisage/v1/preferences,/imedvisage/v1/hospitalPreferences,/imedvisage/v1/user/checkEmail,/imedvisage/v1/user/details,/imedvisage/v1/user/password,/imedvisage/v1/mobileWarning,/imedvisage/v1/reportNotify/register,/rest/userldap,/rest/booking,/rest/applyaccount,/imedvisage/user,/apply,/electronicreferralrest/**
 imed.portal.sare.base.url=https://i-med.com.au/quick-report?imsec=
 
 imed.portal.auth.groups.admin=York St Corporate Office,Referrer Support Team
