--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -44,4 +44,5 @@ imed.electronic.referral.qld.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hide
 imed.electronic.referral.vic.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
 imed.electronic.referral.wa.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
 imed.electronic.referral.drjones.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
+imed.electronic.referral.oz.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au,Sandra.Burleigh@i-med.com.au
 imed.electronic.referral.ril.email.id=Sakthiraj.Kanakarathinam@i-med.com.au,Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
