--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=prod
 
 server.error.whitelabel.enabled=false
 server.servlet.session.timeout=242m
