Add change for electronic referral audit report to CRM.

--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -34,6 +34,7 @@ sqlserver2.datasource.password=282Bde1ed8
 imed.scheduler.server.name=imedpdtom08.imed
 imed.marketing.team.email.ids=Martin.Cox@i-med.com.au,Alexandra.Arter@i-med.com.au
 imed.scheduler.auto.validation.server.name=imedpdtom07.imed
+imed.scheduler.ereferral.server.name=imedpdtom06.imed
 imed.shared.folder.mnt=/mnt/refdrop/prod
 
 #Ahpra scrapper local
