usrcred by huehara for prod/test

--- a/referrer-portal/pom.xml
+++ b/referrer-portal/pom.xml
@@ -20,6 +20,26 @@
 		<java.version>11</java.version>
 		<dcm4che.version>dcm4chee-arc-light-5.10.1</dcm4che.version>
 	</properties>
+	
+	<profiles>
+      <profile>
+          <id>test</id>
+          <activation>
+              <activeByDefault>true</activeByDefault>
+          </activation>
+          <properties>
+              <build.profile.id>test</build.profile.id>
+              <profileActive>test</profileActive>
+          </properties>
+      </profile>
+      <profile>
+          <id>prod</id>
+          <properties>
+              <build.profile.id>prod</build.profile.id>
+              <profileActive>prod</profileActive>
+          </properties>
+      </profile>
+  </profiles>
 
 	<repositories>
 		<repository>
