--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -35,7 +35,7 @@ imed.scheduler.server.name=imedpdtom08.imed
 imed.marketing.team.email.ids=Martin.Cox@i-med.com.au,Alexandra.Arter@i-med.com.au
 imed.scheduler.auto.validation.server.name=imedpdtom07.imed
 imed.scheduler.ereferral.server.name=imedpdtom06.imed
-imed.shared.folder.mnt=/mnt/refdrop/prod
+imed.shared.folder.mnt=/mnt/refdrop
 
 #Ahpra scrapper local
 imed.ahpra.bot.local.url=https://i-medonline.com.au/datascrapper/ahpraDetail
