--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -34,7 +34,7 @@ imed.scheduler.server.name=imedtstom08.imed
 imed.marketing.team.email.ids=Hidehiro.Uehara@i-med.com.au
 imed.scheduler.auto.validation.server.name=imedtstom07.imed
 imed.scheduler.ereferral.server.name=imedtstom06.imed
-imed.shared.folder.mnt=/mnt/refdrop/test
+imed.shared.folder.mnt=/mnt/refdrop
 
 #Ahpra scrapper local
 imed.ahpra.bot.local.url=https://testportal.imed/datascrapper/ahpraDetail
