--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -10,6 +10,9 @@ imed.vuemotion.paramformat=user_name=%s&patient_id=%s&accession_number=%s&work_a
 imed.vuemotion.paramformat.suid=user_name=%s&patient_id=%s&study_instance_uid=%s&work_archive_ae_title=imedtscs01FED&dicom_priors_ae_title=imedtscs01FED&details_bar=false&hide_top=partial&hide_Sides=all&force_all_browsers=true&signout=false
 imed.ldap.url=ldap://10.20.164.87:389
 
+imed.pacs.url=https://imedtsvicint01
+imed.pacs.token=f4ee722510772f773d2446c5ede7050b
+
 spring.h2.console.enabled=false
 spring.jpa.hibernate.ddl-auto=none
 
