fallback pacs user test/prod

--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -13,6 +13,7 @@ imed.ldap.url=ldap://10.20.164.87:389
 imed.pacs.url=https://imedtsvicint01
 imed.pacs.token=f4ee722510772f773d2446c5ede7050b
 imed.pacs.servers=10.100.39.50
+imed.pacs.fallback=myimed
 
 spring.h2.console.enabled=false
 spring.jpa.hibernate.ddl-auto=none
