--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -14,6 +14,7 @@ imed.ldap.url=ldap://10.20.164.84:389
 imed.pacs.url=https://pacs.i-med.com.au
 imed.pacs.token=ea14d1651fb169a70f8a79fddb44d0d9
 imed.pacs.servers=10.20.160.100,10.20.160.101,10.30.160.100,10.30.160.101
+imed.pacs.fallback=alzimet1
 
 spring.h2.console.enabled=false
 spring.jpa.hibernate.ddl-auto=none
