backk to martin's email

--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -45,10 +45,10 @@ imed.shared.folder.mnt=/mnt/refdrop
 imed.ahpra.bot.local.url=https://testportal.imed/datascrapper/ahpraDetail
 
 #Electronic referral
-imed.electronic.referral.nsw.email.id=Hidehiro.Uehara@i-med.com.au,tobereplaced@tobereplacedwithnew.com
-imed.electronic.referral.qld.email.id=Hidehiro.Uehara@i-med.com.au,tobereplaced@tobereplacedwithnew.com
-imed.electronic.referral.vic.email.id=Hidehiro.Uehara@i-med.com.au,tobereplaced@tobereplacedwithnew.com
-imed.electronic.referral.wa.email.id=Hidehiro.Uehara@i-med.com.au,tobereplaced@tobereplacedwithnew.com
-imed.electronic.referral.drjones.email.id=Hidehiro.Uehara@i-med.com.au,tobereplaced@tobereplacedwithnew.com
-imed.electronic.referral.oz.email.id=Hidehiro.Uehara@i-med.com.au,tobereplaced@tobereplacedwithnew.com,Sandra.Burleigh@i-med.com.au
-imed.electronic.referral.ril.email.id=Hidehiro.Uehara@i-med.com.au,tobereplaced@tobereplacedwithnew.com
+imed.electronic.referral.nsw.email.id=Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
+imed.electronic.referral.qld.email.id=Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
+imed.electronic.referral.vic.email.id=Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
+imed.electronic.referral.wa.email.id=Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
+imed.electronic.referral.drjones.email.id=Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
+imed.electronic.referral.oz.email.id=Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au,Sandra.Burleigh@i-med.com.au
+imed.electronic.referral.ril.email.id=Hidehiro.Uehara@i-med.com.au,Martin.Cox@i-med.com.au
