--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -53,3 +53,6 @@ imed.electronic.referral.wa.email.id=wa@i-med.com.au
 imed.electronic.referral.drjones.email.id=contactcentre@drjones.com.au
 imed.electronic.referral.oz.email.id=info@ozradiology.com.au
 imed.electronic.referral.ril.email.id=hobart@i-med.com.au
+
+imed.ereferral.snapscan.rest.url=https://snapscan.com/rest
+imed.ereferral.snapscan.rest.token=tokenforprod
