EnhancedViewer signature param

--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -14,6 +14,7 @@ imed.pacs.url=https://imedtsvicint01
 imed.pacs.token=f4ee722510772f773d2446c5ede7050b
 imed.pacs.servers=10.100.39.50
 imed.pacs.fallback=myimed
+imed.pacs.signaturekey=a423e5a07be87710592637ea03ac99b3
 
 spring.h2.console.enabled=false
 spring.jpa.hibernate.ddl-auto=none
