--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -55,5 +55,5 @@ imed.electronic.referral.drjones.email.id=contactcentre@drjones.com.au
 imed.electronic.referral.oz.email.id=info@ozradiology.com.au
 imed.electronic.referral.ril.email.id=hobart@i-med.com.au
 
-imed.ereferral.snapscan.rest.url=https://snapscan.com/rest
-imed.ereferral.snapscan.rest.token=tokenforprod
+imed.ereferral.snapscan.rest.url=https://booki-med.com.au/api
+imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
