--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -11,6 +11,7 @@ imed.vuemotion.paramformat=user_name=%s&patient_id=%s&accession_number=%s&work_a
 imed.vuemotion.paramformat.suid=user_name=%s&patient_id=%s&study_instance_uid=%s&work_archive_ae_title=imedpdcs01FED&dicom_priors_ae_title=imedpdcs01FED&details_bar=false&hide_top=partial&hide_Sides=all&force_all_browsers=true&signout=false
 imed.ldap.url=ldap://10.20.164.84:389
 
+imed.pacs.viewer.url=https://viewer.i-medonline.com.au
 imed.pacs.url=https://pacs.i-med.com.au
 imed.pacs.token=ea14d1651fb169a70f8a79fddb44d0d9
 imed.pacs.servers=10.20.160.100,10.20.160.101,10.30.160.100,10.30.160.101
