AD formal cleanup group. Enabled pacs acnt removed.

--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -19,7 +19,7 @@ imed.portal.sare.base.url=https://i-med.com.au/quick-report?imsec=
 
 imed.portal.auth.groups.admin=York St Corporate Office,Referrer Support Team
 imed.portal.auth.groups.crmadmin=jenkins-developer
-imed.portal.auth.groups.cleanup=jenkins-developer
+imed.portal.auth.groups.cleanup=Referrer Admins
 imed.portal.auth.groups.editor=I-MED Content Authors,jenkins-developer
 imed.portal.auth.groups.hospital=Hospital Access Referrer
 
