update t&c. replace Julie's email.

--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.connection-timeout=242m
 
 imed.application.version=0.01
 # General url pattern to skip security check
-imed.portal.pages.urls.anon=/,/h2-console/**,/login,/about,/reset,/retrieve,/resetconfirm,/installers,/apply,/confirm,/book/**,/faqs,/privacy,/terms,/feedback/**,/quick-report,/reportdownload,/shareconfirm,/js/public/**,/files/public/**,/images/public/**,/css/**,/referreraccount/**,/imedvisage/**,/rest/**,/robots.txt,/sitemap.xml,/support,/termsofuse,/crmrest/**,/mycrm,/findmycrm,/imedvisage/v1/**,/electronicreferraldownload,/forceresetpassword,/genericmsg.html,/installsupport,/formrest/**
+imed.portal.pages.urls.anon=/,/h2-console/**,/login,/about,/reset,/retrieve,/resetconfirm,/installers,/apply,/confirm,/book/**,/faqs,/privacy,/agreement,/terms,/feedback/**,/quick-report,/reportdownload,/shareconfirm,/js/public/**,/files/public/**,/images/public/**,/css/**,/referreraccount/**,/imedvisage/**,/rest/**,/robots.txt,/sitemap.xml,/support,/termsofuse,/crmrest/**,/mycrm,/findmycrm,/imedvisage/v1/**,/electronicreferraldownload,/forceresetpassword,/genericmsg.html,/installsupport,/formrest/**
 imed.portal.pages.urls.admin=/admin,/admin/**,/adminrest,/adminrest/**
 imed.portal.pages.urls.crmadmin=/crmadmin,/crmadmin/**,/crmadminrest,/crmadminrest/**
 imed.portal.pages.urls.cleanup=/cleanup,/cleanup/**,/cleanuprest,/cleanuprest/**
