--- a/referrer-portal/pom.xml
+++ b/referrer-portal/pom.xml
@@ -20,18 +20,25 @@
 		<java.version>11</java.version>
 		<dcm4che.version>dcm4chee-arc-light-5.10.1</dcm4che.version>
 	</properties>
-	
+
 	<profiles>
-      <profile>
-          <id>test</id>
-          <activation>
-              <activeByDefault>true</activeByDefault>
-          </activation>
-          <properties>
-              <build.profile.id>test</build.profile.id>
-              <profileActive>test</profileActive>
-          </properties>
-      </profile>
+		<profile>
+			<id>local</id>
+			<properties>
+				<build.profile.id>local</build.profile.id>
+				<profileActive>local</profileActive>
+			</properties>
+		</profile>
+		<profile>
+			<id>test</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<build.profile.id>test</build.profile.id>
+				<profileActive>test</profileActive>
+			</properties>
+		</profile>
       <profile>
           <id>prod</id>
           <properties>
@@ -40,23 +47,23 @@
           </properties>
       </profile>
   </profiles>
- 
+
 	<repositories>
 		<repository>
 			<id>central-repo</id>
 			<name>Central Repository</name>
-			<url>http://repo1.maven.org/maven2</url>
+			<url>https://repo1.maven.org/maven2</url>
 		</repository>
 		<repository>
 			<id>www.dcm4che.org</id>
 			<name>dcm4che Repository</name>
-			<url>http://www.dcm4che.org/maven2</url>
+			<url>https://www.dcm4che.org/maven2</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>central-repo</id>
-			<url>http://repo1.maven.org/maven2</url>
+			<url>https://repo1.maven.org/maven2</url>
 		</pluginRepository>
 	</pluginRepositories>
 
@@ -226,14 +233,35 @@
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.0</version>
 		</dependency>
-		
+
 		<!-- Excel -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.1.0</version>
 		</dependency>
-		
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-resource-server -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-resource-server</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-jose -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-jose</artifactId>
+			<version>5.4.6</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-core -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-core</artifactId>
+			<version>5.4.6</version>
+		</dependency>
+
+
 		<!-- HAPI -->
 		<dependency>
 			<groupId>ca.uhn.hapi</groupId>
@@ -265,13 +293,13 @@
 			<artifactId>hapi-base</artifactId>
 			<version>2.2</version>
 		</dependency>
-		
+
 		<dependency>
 		    <groupId>com.itextpdf</groupId>
 		    <artifactId>html2pdf</artifactId>
 		    <version>2.0.2</version>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
@@ -287,15 +315,15 @@
 				<version>2.2</version>
 				<configuration>
 					<update>true</update>
-					
+
 					<!-- TEST -->
 					<url>http://imedtstom06.imed:8080/manager/text</url>
 					<username>huehara</username>
-					<password>D3pl0ym3nt%</password>   
+					<password>D3pl0ym3nt%</password>
 
-					<!-- PROD 
-					<url>http://imedpdtom08.imed:8080/manager/text</url> 
-					<username>huehara</username> 
+					<!-- PROD
+					<url>http://imedpdtom08.imed:8080/manager/text</url>
+					<username>huehara</username>
 					<password>PR0DD3pl0ym3nt%X</password>   -->
 
 					<path>/referrer</path>
