ad cors settings

--- a/referrer-portal/src/main/resources/application-local.properties
+++ b/referrer-portal/src/main/resources/application-local.properties
@@ -66,3 +66,5 @@ imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
 
 imed.ldap.userdn=cn=admin,dc=mia,dc=net,dc=au
 imed.ldap.password=adminpassword
+
+imed.frontend.url=http://localhost:3000
