--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -36,3 +36,5 @@ imed.scheduler.marketing.team.email.cron=0 0 2 * * MON
 # ldap credentials
 imed.ldap.userdn=cn=root
 imed.ldap.password=794bo3HAST
+
+imed.frontend.url=http://localhost:3000
