--- a/referrer-portal/src/main/resources/application-local.properties
+++ b/referrer-portal/src/main/resources/application-local.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/referrer
 
 imed.application.url=https://testportal.imed/referrer
 
-imed.visage.url=http://10.100.39.182:8181/jris/portal/v1/
+imed.visage.url=http://test-env.eba-ijkbrsts.ap-southeast-2.elasticbeanstalk.com/visage
 imed.vuemotion.url=https://imedtscs02.mia.net.au/portal
 imed.vuemotion.enckey=NFBlI0ghUDV6ZXA0dXBSQVN3dVByI200U3A/d1JVc3Q=
 imed.vuemotion.paramformat=user_name=%s&patient_id=%s&accession_number=%s&work_archive_ae_title=imedtscs01FED&details_bar=false&hide_top=partial&hide_Sides=report&force_all_browsers=true&signout=false
@@ -23,8 +23,10 @@ imed.pacs.servers=10.20.160.100,10.20.160.101,10.30.160.100,10.30.160.101
 imed.pacs.fallback=IMEDOL2
 imed.pacs.signaturekey=44d988e5b92d096e05dab712c8705dd5
 
-spring.h2.console.enabled=false
-spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.enabled=true
+spring.jpa.hibernate.hbm2ddl.auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.show-sql=false
