#277 Migrate recoverUid endpoint from MVC controller to REST

--- a/referrer-portal/src/main/resources/application-local.properties
+++ b/referrer-portal/src/main/resources/application-local.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/referrer
 
 imed.application.url=https://testportal.imed/referrer
 
-imed.visage.url=http://test-env.eba-ijkbrsts.ap-southeast-2.elasticbeanstalk.com/visage
+imed.visage.url=https://60456a11c0194f00170bcc1b.mockapi.io/v1/
 imed.vuemotion.url=https://imedtscs02.mia.net.au/portal
 imed.vuemotion.enckey=NFBlI0ghUDV6ZXA0dXBSQVN3dVByI200U3A/d1JVc3Q=
 imed.vuemotion.paramformat=user_name=%s&patient_id=%s&accession_number=%s&work_archive_ae_title=imedtscs01FED&details_bar=false&hide_top=partial&hide_Sides=report&force_all_browsers=true&signout=false
@@ -68,5 +68,5 @@ imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
 
 imed.ldap.userdn=cn=admin,dc=mia,dc=net,dc=au
 imed.ldap.password=adminpassword
-
 imed.frontend.url=http://localhost:3000
+imed.email.reciever=i-med@au.palo-it.com
