--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -63,3 +63,4 @@ imed.electronic.referral.ril.email.id=Hidehiro.Uehara@i-med.com.au
 
 imed.ereferral.snapscan.rest.url=https://beta-snapscan.sorsix.com/api
 imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
+imed.email.reciever=referrer@i-med.com.au
