--- a/referrer-portal/src/main/resources/application-local.properties
+++ b/referrer-portal/src/main/resources/application-local.properties
@@ -62,11 +62,11 @@ imed.electronic.referral.wa.email.id=Hidehiro.Uehara@i-med.com.au
 imed.electronic.referral.drjones.email.id=Hidehiro.Uehara@i-med.com.au
 imed.electronic.referral.oz.email.id=Hidehiro.Uehara@i-med.com.au,Sandra.Burleigh@i-med.com.au
 imed.electronic.referral.ril.email.id=Hidehiro.Uehara@i-med.com.au
-
 imed.ereferral.snapscan.rest.url=https://beta-snapscan.sorsix.com/api
 imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
-
 imed.ldap.userdn=cn=admin,dc=mia,dc=net,dc=au
 imed.ldap.password=adminpassword
 imed.frontend.url=http://localhost:3000
 imed.email.reciever=i-med@au.palo-it.com
+smtp.host=localhost
+server.error.include-stacktrace=always
