--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -38,3 +38,4 @@ imed.ldap.userdn=cn=root
 imed.ldap.password=794bo3HAST
 imed.frontend.url=http://localhost:3000
 imed.api-v2.prefix=/api/v2
+smtp.host=smtp.i-med.com.au
