--- a/referrer-portal/pom.xml
+++ b/referrer-portal/pom.xml
@@ -52,7 +52,7 @@
 		<repository>
 			<id>central-repo</id>
 			<name>Central Repository</name>
-			<url>http://repo1.maven.org/maven2</url>
+			<url>https://repo1.maven.org/maven2</url>
 		</repository>
 		<repository>
 			<id>www.dcm4che.org</id>
@@ -62,7 +62,7 @@
 		<repository>
 			<id>jcenter-snapshots</id>
 			<name>jcenter</name>
-			<url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
+			<url>https://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
