add frontend url to application-test.properties

--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -60,7 +60,7 @@ imed.electronic.referral.wa.email.id=Hidehiro.Uehara@i-med.com.au
 imed.electronic.referral.drjones.email.id=Hidehiro.Uehara@i-med.com.au
 imed.electronic.referral.oz.email.id=Hidehiro.Uehara@i-med.com.au,Sandra.Burleigh@i-med.com.au
 imed.electronic.referral.ril.email.id=Hidehiro.Uehara@i-med.com.au
-
 imed.ereferral.snapscan.rest.url=https://beta-snapscan.sorsix.com/api
 imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
 imed.email.reciever=referrer@i-med.com.au
+imed.frontend.url=https://dfu9fdhq71jcn.cloudfront.net
