revert changes to application.properties

--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=local
+spring.profiles.active=@profileActive@
 
 server.error.whitelabel.enabled=false
 server.servlet.session.timeout=242m
@@ -36,6 +36,6 @@ imed.scheduler.marketing.team.email.cron=0 0 2 * * MON
 # ldap credentials
 imed.ldap.userdn=cn=root
 imed.ldap.password=794bo3HAST
-imed.frontend.url=http://localhost:3000
+imed.frontend.url=https://i-medonline.com.au/referrer
 imed.api-v2.prefix=/api/v2
 smtp.host=smtp.i-med.com.au
