add localhost to cors for test env

--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -63,4 +63,4 @@ imed.electronic.referral.ril.email.id=Hidehiro.Uehara@i-med.com.au
 imed.ereferral.snapscan.rest.url=https://beta-snapscan.sorsix.com/api
 imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
 imed.email.reciever=referrer@i-med.com.au
-imed.frontend.url=https://dfu9fdhq71jcn.cloudfront.net
+imed.frontend.url=https://dfu9fdhq71jcn.cloudfront.net,http://localhost:3000
