--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -64,4 +64,4 @@ imed.electronic.referral.ril.email.id=Hidehiro.Uehara@i-med.com.au
 imed.ereferral.snapscan.rest.url=https://beta-snapscan.sorsix.com/api
 imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
 imed.email.reciever=referrer@i-med.com.au
-imed.frontend.url=https://dfu9fdhq71jcn.cloudfront.net,http://localhost:3000
+imed.frontend.url=http://localhost:3000,https://dts5jlohv6ntd.cloudfront.net,https://d393qjrrct1no0.cloudfront.net
