--- a/referrer-portal/src/main/resources/application.properties
+++ b/referrer-portal/src/main/resources/application.properties
@@ -17,7 +17,7 @@ imed.portal.pages.urls.anon.swagger=/swagger*,/swagger**/*.*,/swagger-resources/
 imed.portal.pages.rest.methods.nocsrf=/imedvisage/v1/token,/imedvisage/v1/refreshtoken,/imedvisage/v1/preferences,/imedvisage/v1/hospitalPreferences,/imedvisage/v1/user/checkEmail,/imedvisage/v1/user/details,/imedvisage/v1/user/password,/imedvisage/v1/mobileWarning,/imedvisage/v1/reportNotify/register,/rest/userldap,/rest/booking,/rest/applyaccount,/imedvisage/user,/apply,/api/v2/**
 imed.portal.sare.base.url=https://i-med.com.au/quick-report?imsec=
 
-imed.portal.auth.groups.admin=York St Corporate Office,Referrer Support Team
+imed.portal.auth.groups.admin=York St Corporate Office,Referrer Support Team,USR-ReferalPortal_Admin
 imed.portal.auth.groups.crmadmin=jenkins-developer
 imed.portal.auth.groups.cleanup=Referrer Admins
 imed.portal.auth.groups.editor=I-MED Content Authors,jenkins-developer
