update test email recipients

--- a/referrer-portal/src/main/resources/application-local.properties
+++ b/referrer-portal/src/main/resources/application-local.properties
@@ -70,3 +70,4 @@ imed.frontend.url=http://localhost:3000
 imed.email.reciever=i-med@au.palo-it.com
 smtp.host=localhost
 server.error.include-stacktrace=always
+imed.email.test.receiver=imol-palo@sg.palo-it.com
