--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -65,3 +65,5 @@ imed.ereferral.snapscan.rest.url=https://beta-snapscan.sorsix.com/api
 imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
 imed.email.reciever=referrer@i-med.com.au
 imed.frontend.url=http://localhost:3000,https://dts5jlohv6ntd.cloudfront.net,https://d393qjrrct1no0.cloudfront.net
+
+imed.email.test.receiver=Hidehiro.Uehara@i-med.com.au,imol-palo@sg.palo-it.com
