--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -60,3 +60,4 @@ imed.ereferral.snapscan.rest.url=https://booki-med.com.au/api
 imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
 imed.email.reciever=referrer@i-med.com.au
 server.error.include-stacktrace=never
+imed.email.test.receiver=
