Revert "Merge branch 'feature/refresh-token' into 'master'"
This reverts commit 0da97f3c312f7e3882542c5df5036aca1cdea297, reversing
changes made to 49e249ead20137501f8c3814475f62700e21463d.

--- a/referrer-portal/src/main/resources/application-local.properties
+++ b/referrer-portal/src/main/resources/application-local.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/referrer
 
 imed.application.url=https://testportal.imed/referrer
 
-imed.visage.url=https://visage.i-med.com.au/jris/portal/v1/
+imed.visage.url=http://test-env.eba-ijkbrsts.ap-southeast-2.elasticbeanstalk.com/visage/
 imed.vuemotion.url=https://imedtscs02.mia.net.au/portal
 imed.vuemotion.enckey=NFBlI0ghUDV6ZXA0dXBSQVN3dVByI200U3A/d1JVc3Q=
 imed.vuemotion.paramformat=user_name=%s&patient_id=%s&accession_number=%s&work_archive_ae_title=imedtscs01FED&details_bar=false&hide_top=partial&hide_Sides=report&force_all_browsers=true&signout=false
