Add flyway dependency and refresh token table update

--- a/referrer-portal/src/main/resources/application-local.properties
+++ b/referrer-portal/src/main/resources/application-local.properties
@@ -39,6 +39,13 @@ sqlserver1.datasource.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=IMED_AUDI
 sqlserver1.datasource.username=sa
 sqlserver1.datasource.password=Your_password123
 
+spring.flyway.enabled=false
+spring.flyway.user=sa
+spring.flyway.password=Your_password123
+spring.flyway.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=IMED_AUDITDB
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baselineOnMigrate=true
+
 sqlserver2.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 sqlserver2.datasource.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=IMED_CLINICDB
 sqlserver2.datasource.username=sa
