--- a/referrer-portal/pom.xml
+++ b/referrer-portal/pom.xml
@@ -358,7 +358,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test-autoconfigure</artifactId>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>5.2.4</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<finalName>referrer</finalName>
@@ -386,6 +391,11 @@
 
 					<path>/referrer</path>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>4.0.3</version>
 			</plugin>
 		</plugins>
 	</build>
