--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -26,6 +26,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+spring.flyway.enabled=true
+spring.flyway.user=IMED_AUDIT_USR
+spring.flyway.password=282Bde1ed8
+spring.flyway.url=jdbc:sqlserver://IMEDDMZIWS10.dmz.local:1433;databaseName=IMED_AUDITDB
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baselineOnMigrate=true
+
 #databases SQL server x 2
 sqlserver1.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 sqlserver1.datasource.url=jdbc:sqlserver://IMEDDMZIWS10.dmz.local:1433;databaseName=IMED_AUDITDB
