--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -32,6 +32,13 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+spring.flyway.enabled=true
+spring.flyway.user=sa
+spring.flyway.password=b&c7$4$3=&=C
+spring.flyway.url=jdbc:sqlserver://IMEDTSSQL01:1633;databaseName=IMED_AUDITDB
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baselineOnMigrate=true
+
 #databases SQL server x 2
 sqlserver1.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 sqlserver1.datasource.url=jdbc:sqlserver://IMEDTSSQL01:1633;databaseName=IMED_AUDITDB
