add roles from referrer and ad ldaps

--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -10,6 +10,7 @@ imed.vuemotion.enckey=NFBlI0ghUDV6ZXA0dXBSQVN3dVByI200U3A/d1JVc3Q=
 imed.vuemotion.paramformat=user_name=%s&patient_id=%s&accession_number=%s&work_archive_ae_title=imedpdcs01FED&details_bar=false&hide_top=partial&hide_Sides=report&force_all_browsers=true&signout=false
 imed.vuemotion.paramformat.suid=user_name=%s&patient_id=%s&study_instance_uid=%s&work_archive_ae_title=imedpdcs01FED&dicom_priors_ae_title=imedpdcs01FED&details_bar=false&hide_top=partial&hide_Sides=all&force_all_browsers=true&signout=false
 imed.ldap.url=ldap://10.20.164.84:389
+imed.ldap.ad.url=ldap://10.100.120.10:389
 
 imed.pacs.viewer.url=https://viewer.i-medonline.com.au
 imed.pacs.url=https://pacs.i-med.com.au
