enable emails on practice request on test & fix send-password-reset email

--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -69,3 +69,6 @@ imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
 imed.email.reciever=referrer@i-med.com.au
 server.error.include-stacktrace=never
 imed.email.test.receiver=
+
+# TODO:
+imed.application.v3.url=
