--- a/referrer-portal/src/main/resources/application-local.properties
+++ b/referrer-portal/src/main/resources/application-local.properties
@@ -79,4 +79,4 @@ imed.email.reciever=i-med@au.palo-it.com
 smtp.host=localhost
 server.error.include-stacktrace=always
 imed.email.test.receiver=imol-palo@sg.palo-it.com
-imed.application.v3.url=http://localhost:3000/
+imed.application.v3.url=http://localhost:3000
