Revert debug email recipient

--- a/referrer-portal/src/main/resources/application-test.properties
+++ b/referrer-portal/src/main/resources/application-test.properties
@@ -71,7 +71,7 @@ imed.electronic.referral.oz.email.id=Hidehiro.Uehara@i-med.com.au,Sandra.Burleig
 imed.electronic.referral.ril.email.id=Hidehiro.Uehara@i-med.com.au
 imed.ereferral.snapscan.rest.url=https://beta-snapscan.sorsix.com/api
 imed.ereferral.snapscan.rest.token=TKnXxpBZTtWDynG-ub6W6QyU0u0
-imed.email.reciever=jardel@au.palo-it.com
+imed.email.reciever=imol-palo@sg.palo-it.com
 imed.frontend.url=http://localhost:3000,https://dts5jlohv6ntd.cloudfront.net,https://d393qjrrct1no0.cloudfront.net
 
 imed.email.test.receiver=Hidehiro.Uehara@i-med.com.au,imol-palo@sg.palo-it.com
