Add portal url to application-prod.properties

--- a/referrer-portal/src/main/resources/application-prod.properties
+++ b/referrer-portal/src/main/resources/application-prod.properties
@@ -70,5 +70,4 @@ imed.email.reciever=referrer@i-med.com.au
 server.error.include-stacktrace=never
 imed.email.test.receiver=
 
-# TODO:
-imed.application.v3.url=
+imed.application.v3.url=https://portal.i-medonline.com.au
